WB-2142 fix cards vertical alignment for small number of cards

--- a/assets/less/a2-components/projects-list.less
+++ b/assets/less/a2-components/projects-list.less
@@ -12,7 +12,6 @@
   width: 100%;
   padding: 0 3px;
   justify-content: left;
-  min-height: 600px;
   @media (max-width: 1200px) {
     justify-content: center;
   }
